store-37 added logic
